Implement internal extend, support merge with customizer. (release 1.0.1)

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 .DS_Store
 .idea
 .babelrc
+.build
 node_modules
 npm-debug.log
 coverage
@@ -12,3 +13,4 @@ src
 *.coffee
 .npmignore
 .gitignore
+dist/lib/
