--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merge-lite",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A light weight merge support customize array<object> property merging.",
   "main": "dist/merge.umd.js",
   "browser": "dist/merge.umd.min.js",
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/allex/merge-lite.git"
   },
+  "keywords": [
+    "merge", "extend", "customizer", "recursive", "deep", "lodash.mergeWith"
+  ],
   "scripts": {
     "build-coffee": "coffee -o ./dist ./",
     "build": "node .build/build.js",
